--- a/header.html
+++ b/header.html
@@ -1,112 +1,478 @@
 <header>
-    <section class="icons">
+    <!-- Fixed Icons -->
+    <section class="fixed-icons">
         <ul>
-            <li><a href="https://api.whatsapp.com/send?phone=7357346016&text=what'sapp%20number"> <img
-                        src="photo/w.webp"></a></li>
-            <li class="back-top"><a href="#"> <img src="photo/u.webp"></a></li>
+            <li><a href="https://api.whatsapp.com/send?phone=7357346016&text=whatsapp%20number"><img src="photo/w.webp" alt="WhatsApp"></a></li>
+            <li class="back-top"><a href="#"><img src="photo/u.webp" alt="Back to top"></a></li>
         </ul>
     </section>
-    <section class="top-header">
+
+    <!-- Top Header Bar -->
+    <section class="top-bar">
         <div class="container">
             <div class="row">
-                <div class="th-left01 col-xl-10 col-lg-10 col-md-10 col-sm-12 col-12">
-                    <ul>
-                        <li><a href=""><i class="fa-solid fa-location-dot"></i> Nayapura Chokha Jodhpur </a></li>
-                        <li><a href="tel:7357346016"><i class="fa-solid fa-headphones"></i> Support +917357346016</a>
-                        </li>
+                <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-12">
+                    <ul class="contact-info">
+                        <li><a href=""><i class="fa-solid fa-location-dot"></i> Nayapura Chokha, Jodhpur </a></li>
+                        <li><a href="tel:7357346016"><i class="fa-solid fa-phone"></i> +91 7357346016</a></li>
+                        <li><a href="mailto:lalit979932@gmail.com"><i class="fa-solid fa-envelope"></i> lalit979932@gmail.com</a></li>
                     </ul>
                 </div>
-                <div class="th-right01 row col-xl-2 col-lg-2 col-md-2 col-sm-12 col-12 ">
-                    <ul>
-                        <li><a href=""><i class="fa-brands fa-facebook-f"></i></a></li>
-                        <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
-                        <li><a href=""><i class="fa-brands fa-twitter"></i></a></li>
+                <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
+                    <ul class="social-links">
+                        <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
+                        <li><div id="google_translate_element"></div></li>
                     </ul>
-                    <div id="google_translate_element"></div>
                 </div>
             </div>
         </div>
     </section>
-    <nav class="buttom-navbar">
+
+    <!-- Main Navigation -->
+    <nav class="main-nav">
         <div class="container">
-            <div class="row">
-                <div class="btn-left01 lr01 col-xl-5 col-lg-5 col-md-5 ">
-                    <ul class="row">
-                        <li><a href="/" class="first-a">Home</a></li>
-                        <li><a href="aashram">Ashram</a></li>
-                        <li class="third-a"><a href="#">About <div class="about-submenu">
-                                    <ul>
-                                        <li><a href="aashram">Ashram</a></li>
-                                        <li><a href="project">Programs</a></li>
-                                        <li><a href="gallery">Gallery</a></li>
-                                        <li><a href="#">Leadership</a></li>
-                                    </ul>
-                                </div> </a></li>
-                        <li><a href="collection">Shop All</a></li>
-                    </ul>
+            <div class="row align-items-center">
+                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-6">
+                    <a href="index.html" class="logo">
+                        <img src="photo/logo-2.webp" alt="Temple Logo">
+                    </a>
                 </div>
-                <div class="logo row col-xl-2 col-lg-2 col-md-2 col-sm-12 col-12 "> <a href="/"><img
-                            src="photo/logo-2.webp"></a> <a href="#" class="bar"><i class="fa-solid fa-bars"></i></a>
-                </div>
-                <div class="btn-right01 lr01 col-xl-5 col-lg-5 col-md-5 ">
-                    <ul class="row">
-                        <li><a href="event">Events</a></li>
-                        <li><a href="gallery">Gallery</a></li>
-                        <li class="third-a"><a href="#">News <div class="about-submenu about-submenu01">
-                                    <ul>
-                                        <li><a href="#"> Posts</a></li>
-                                        <li><a href="#">Classic</a></li>
-                                        <li><a href="#">Portfolio </a></li>
-                                        <li><a href="#">Chess </a></li>
-                                    </ul>
-                                </div> </a></li>
-                        <li><a href="contact">Contacts</a></li>
-                        <li></li>
+                <div class="col-xl-9 col-lg-9 col-md-9 col-sm-6 col-6">
+                    <ul class="nav-menu">
+                        <li><a href="index.html" class="active">Home</a></li>
+                        <li class="dropdown">
+                            <a href="#">Temples <i class="fa-solid fa-chevron-down"></i></a>
+                            <ul class="submenu">
+                                <li><a href="aashram.html">All Temples</a></li>
+                                <li><a href="#">Jyotirlinga</a></li>
+                                <li><a href="#">Char Dham</a></li>
+                                <li><a href="#">Shakti Peeth</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="event.html">Events</a></li>
+                        <li><a href="gallery.html">Gallery</a></li>
+                        <li class="dropdown">
+                            <a href="#">About <i class="fa-solid fa-chevron-down"></i></a>
+                            <ul class="submenu">
+                                <li><a href="#">About Us</a></li>
+                                <li><a href="#">Programs</a></li>
+                                <li><a href="#">Leadership</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="#" class="search-btn"><i class="fa-solid fa-magnifying-glass"></i></a></li>
                     </ul>
+                    <a href="#" class="mobile-menu-toggle"><i class="fa-solid fa-bars"></i></a>
                 </div>
             </div>
         </div>
     </nav>
-    <section class="side-bar col-sm-12 col-12">
-        <div class="croseicon"> <a href="#" class="close"><i class="fa-solid fa-xmark"></i></a> </div>
-        <div class="side-bar-img"> <img src="photo/logo-3.webp"> </div>
-        <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="aashram">Ashram</a></li>
-            <li class="sidebar-third-a"><a href="#">About <i class="fa-solid fa-angle-down"></i>
-                    <div class=" sidebar-about-submenu-01">
-                        <ul>
-                            <li><a href="aashram">Ashram</a></li>
-                            <li><a href="project">Programs</a></li>
-                            <li><a href="gallery">Gallery</a></li>
-                            <li><a href="#">Leadership</a></li>
-                        </ul>
-                    </div>
-                </a></li>
-            <li><a href="collection">Shop All</a></li>
-            <li><a href="event">Events</a></li>
-            <li><a href="gallery">Gallery</a></li>
-            <li class="sidebar-third-a"><a href="#">News <i class="fa-solid fa-angle-down"></i>
-                    <div class=" sidebar-about-submenu-02">
-                        <ul>
-                            <li><a href="#"> Posts</a></li>
-                            <li><a href="#">Classic</a></li>
-                            <li><a href="#">Portfolio </a></li>
-                            <li><a href="#">Chess </a></li>
-                        </ul>
-                    </div>
-                </a></li>
-            <li><a href="contact">Contacts</a></li>
+
+    <!-- Mobile Sidebar -->
+    <section class="mobile-sidebar">
+        <div class="sidebar-close"><a href="#"><i class="fa-solid fa-xmark"></i></a></div>
+        <div class="sidebar-logo"><img src="photo/logo-3.webp" alt="Logo"></div>
+        <ul class="mobile-nav-menu">
+            <li><a href="index.html">Home</a></li>
+            <li class="mobile-dropdown">
+                <a href="#">Temples <i class="fa-solid fa-chevron-down"></i></a>
+                <ul class="mobile-submenu">
+                    <li><a href="aashram.html">All Temples</a></li>
+                    <li><a href="#">Jyotirlinga</a></li>
+                    <li><a href="#">Char Dham</a></li>
+                    <li><a href="#">Shakti Peeth</a></li>
+                </ul>
+            </li>
+            <li><a href="event.html">Events</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+            <li class="mobile-dropdown">
+                <a href="#">About <i class="fa-solid fa-chevron-down"></i></a>
+                <ul class="mobile-submenu">
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Programs</a></li>
+                    <li><a href="#">Leadership</a></li>
+                </ul>
+            </li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
-        <div class="search-box"> <input type="text" placeholder="search" class="search-box01"> <a href="#"><i
-                    class="fa-solid fa-magnifying-glass"></i></a> </div>
-        <div class="last-icon col-sm-12 col-12">
-            <ul class="row">
-                <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
-            </ul>
+        <div class="sidebar-search">
+            <input type="text" placeholder="Search...">
+            <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+        </div>
+        <div class="sidebar-social">
+            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            <a href="#"><i class="fa-brands fa-youtube"></i></a>
         </div>
     </section>
 </header>
-<!-- Scripts optimized and moved to main pages for better performance -->
+
+<style>
+    /* Header Styles - Incredible India Style */
+    :root {
+        --primary-color: #FF9933;
+        --secondary-color: #FFFFFF;
+        --accent-color: #000080;
+        --dark-color: #1D1D1D;
+        --light-color: #F5F5F5;
+    }
+
+    .fixed-icons ul {
+        list-style: none;
+        position: fixed;
+        bottom: 40px;
+        right: 20px;
+        z-index: 9999;
+    }
+
+    .fixed-icons ul li a {
+        display: block;
+    }
+
+    .fixed-icons ul li a img {
+        width: 40px;
+        height: 40px;
+    }
+
+    .back-top {
+        display: none;
+    }
+
+    /* Top Bar */
+    .top-bar {
+        background: linear-gradient(90deg, #FF9933 0%, #FF7700 100%);
+        padding: 10px 0;
+    }
+
+    .top-bar .contact-info {
+        list-style: none;
+        display: flex;
+        margin: 0;
+        padding: 0;
+    }
+
+    .top-bar .contact-info li {
+        margin-right: 25px;
+    }
+
+    .top-bar .contact-info li a {
+        color: #fff;
+        text-decoration: none;
+        font-size: 14px;
+        display: flex;
+        align-items: center;
+        gap: 8px;
+    }
+
+    .top-bar .contact-info li a i {
+        font-size: 12px;
+    }
+
+    .top-bar .social-links {
+        list-style: none;
+        display: flex;
+        justify-content: flex-end;
+        margin: 0;
+        padding: 0;
+    }
+
+    .top-bar .social-links li {
+        margin-left: 15px;
+    }
+
+    .top-bar .social-links li a {
+        color: #fff;
+        font-size: 16px;
+        transition: all 0.3s ease;
+    }
+
+    .top-bar .social-links li a:hover {
+        color: #000080;
+    }
+
+    /* Main Navigation */
+    .main-nav {
+        background: #fff;
+        box-shadow: 0 2px 15px rgba(0,0,0,0.1);
+        position: relative;
+        z-index: 1000;
+    }
+
+    .main-nav .logo img {
+        max-height: 80px;
+        width: auto;
+    }
+
+    .nav-menu {
+        list-style: none;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        margin: 0;
+        padding: 0;
+    }
+
+    .nav-menu > li {
+        position: relative;
+    }
+
+    .nav-menu > li > a {
+        color: #1D1D1D;
+        text-decoration: none;
+        padding: 30px 20px;
+        display: block;
+        font-weight: 500;
+        font-size: 15px;
+        text-transform: uppercase;
+        letter-spacing: 1px;
+        transition: all 0.3s ease;
+    }
+
+    .nav-menu > li > a:hover,
+    .nav-menu > li > a.active {
+        color: #FF9933;
+    }
+
+    .nav-menu > li:hover > a {
+        color: #FF9933;
+    }
+
+    .nav-menu li.dropdown > a::after {
+        content: '\f107';
+        font-family: 'Font Awesome 6 Free';
+        font-weight: 900;
+        margin-left: 5px;
+        font-size: 12px;
+    }
+
+    /* Submenu */
+    .submenu {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        background: #fff;
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        min-width: 220px;
+        box-shadow: 0 10px 30px rgba(0,0,0,0.15);
+        opacity: 0;
+        visibility: hidden;
+        transform: translateY(10px);
+        transition: all 0.3s ease;
+    }
+
+    .nav-menu li.dropdown:hover > .submenu {
+        opacity: 1;
+        visibility: visible;
+        transform: translateY(0);
+    }
+
+    .submenu li {
+        border-bottom: 1px solid #f0f0f0;
+    }
+
+    .submenu li:last-child {
+        border-bottom: none;
+    }
+
+    .submenu li a {
+        color: #1D1D1D;
+        text-decoration: none;
+        padding: 15px 20px;
+        display: block;
+        font-size: 14px;
+        transition: all 0.3s ease;
+    }
+
+    .submenu li a:hover {
+        background: #FF9933;
+        color: #fff;
+        padding-left: 25px;
+    }
+
+    .search-btn {
+        padding: 30px 15px !important;
+    }
+
+    .mobile-menu-toggle {
+        display: none;
+        font-size: 24px;
+        color: #1D1D1D;
+    }
+
+    /* Mobile Sidebar */
+    .mobile-sidebar {
+        background: #fff;
+        width: 100%;
+        height: 100%;
+        position: fixed;
+        z-index: 9999;
+        top: 0;
+        right: -100%;
+        transition: all 0.5s ease;
+        overflow-y: auto;
+        padding: 20px;
+    }
+
+    .mobile-sidebar.active {
+        right: 0;
+    }
+
+    .sidebar-close {
+        text-align: right;
+    }
+
+    .sidebar-close a {
+        font-size: 30px;
+        color: #FF9933;
+    }
+
+    .sidebar-logo {
+        text-align: center;
+        margin: 30px 0;
+    }
+
+    .sidebar-logo img {
+        max-width: 150px;
+    }
+
+    .mobile-nav-menu {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+    }
+
+    .mobile-nav-menu li {
+        border-bottom: 1px solid #f0f0f0;
+    }
+
+    .mobile-nav-menu li a {
+        color: #1D1D1D;
+        text-decoration: none;
+        padding: 15px 0;
+        display: block;
+        font-size: 18px;
+    }
+
+    .mobile-dropdown > a::after {
+        content: '\f107';
+        font-family: 'Font Awesome 6 Free';
+        font-weight: 900;
+        float: right;
+    }
+
+    .mobile-submenu {
+        display: none;
+        list-style: none;
+        padding-left: 20px;
+    }
+
+    .mobile-dropdown.active > .mobile-submenu {
+        display: block;
+    }
+
+    .sidebar-search {
+        margin-top: 30px;
+        position: relative;
+    }
+
+    .sidebar-search input {
+        width: 100%;
+        padding: 15px;
+        border: 2px solid #FF9933;
+        border-radius: 30px;
+    }
+
+    .sidebar-search a {
+        position: absolute;
+        right: 15px;
+        top: 50%;
+        transform: translateY(-50%);
+        color: #FF9933;
+    }
+
+    .sidebar-social {
+        display: flex;
+        justify-content: center;
+        margin-top: 30px;
+        gap: 20px;
+    }
+
+    .sidebar-social a {
+        color: #FF9933;
+        font-size: 20px;
+    }
+
+    /* Responsive */
+    @media (max-width: 991px) {
+        .nav-menu {
+            display: none;
+        }
+
+        .mobile-menu-toggle {
+            display: block;
+            text-align: right;
+        }
+
+        .top-bar .contact-info {
+            flex-direction: column;
+            gap: 10px;
+        }
+
+        .top-bar .social-links {
+            justify-content: flex-start;
+            margin-top: 10px;
+        }
+    }
+
+    @media (max-width: 768px) {
+        .top-bar {
+            display: none;
+        }
+
+        .main-nav .logo img {
+            max-height: 60px;
+        }
+    }
+</style>
+
+<script>
+    // Mobile menu toggle
+    document.querySelector('.mobile-menu-toggle').addEventListener('click', function(e) {
+        e.preventDefault();
+        document.querySelector('.mobile-sidebar').classList.add('active');
+    });
+
+    document.querySelector('.sidebar-close a').addEventListener('click', function(e) {
+        e.preventDefault();
+        document.querySelector('.mobile-sidebar').classList.remove('active');
+    });
+
+    // Mobile dropdown toggle
+    document.querySelectorAll('.mobile-dropdown > a').forEach(function(item) {
+        item.addEventListener('click', function(e) {
+            e.preventDefault();
+            this.parentElement.classList.toggle('active');
+        });
+    });
+
+    // Back to top
+    window.addEventListener('scroll', function() {
+        var backTop = document.querySelector('.back-top');
+        if (window.scrollY > 300) {
+            backTop.style.display = 'block';
+        } else {
+            backTop.style.display = 'none';
+        }
+    });
+
+    document.querySelector('.back-top a').addEventListener('click', function(e) {
+        e.preventDefault();
+        window.scrollTo({top: 0, behavior: 'smooth'});
+    });
+</script>
